@@ -37,7 +37,7 @@ import misc.validation as validation
 
 import gi
 gi.require_version('Gtk', '3.0')
-from gi.repository import Gtk, Gdk
+from gi.repository import Gtk
 
 # When testing, no _() is available
 try:
