@@ -153,6 +153,8 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="margin-left">5</property>
+                <property name="margin-right">5</property>
                 <signal name="clicked" handler="luks_settings_clicked" swapped="no"/>
             </object>
             <packing>
